@@ -70,6 +70,8 @@ SVN trunk (1.1+svn):
    * added a optional random_leader= tag inside a [multiplayer_side] to
      specify a different list of randomly selectable leaders
    * added level as a possible argument for standard unit [filter]
+ * music:
+   * support for more than one music file per scenario with adjustable spacing
  * Miscellaneous
    * anonymous data logging for single player campaigns, see stats.wesnoth.org
    * zipios++ can now be disabled by passing --without-zipios to configure
